--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="plotlyPlot"></div>
+		<div id="plots-grid">
+			<div id="plot1"></div>
+			<div id="plot2"></div>
+			<div id="plot3"></div>
+		</div>
 	</body>
 </html>
