Move back to Webpack

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="./styles.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<script src="./plotly.min.js" defer></script>
 		<script src="./data.js" defer></script>
-		<script src="./main.js" defer></script>
+		<script src="./index.js" defer></script>
 		<title>template-plotly-ts</title>
 	</head>
 	<body>
