Use of golden-layout...
... 2 issues:
- if we set isClosable at false in golden-layout, the panel is not movable too
- at init, before any browser window resizing, Plotly (and only Plotly, golden-layout is ok) is not responsive!

--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,15 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<script src="./plotly.min.js" defer></script>
-		<script src="./data.js" defer></script>
-		<script src="./index.js" defer></script>
+		<link rel="stylesheet" href="./goldenlayout-base.css">
+		<link rel="stylesheet" href="./goldenlayout-light-theme.css">
+		<script type="text/javascript" src="./plotly.min.js" defer></script>
+		<script type="text/javascript" src="./data.js" defer></script>
+		<script type="text/javascript" src="./index.js" defer></script>
 		<title>template-plotly-ts</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="plots-grid">
-			<div id="plot1"></div>
-			<div id="plot2"></div>
-			<div id="plot3"></div>
-		</div>
+		<div id="plots-grid"></div>
 	</body>
 </html>
