--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<link rel="stylesheet" href="./leaflet.css">
 		<link rel="stylesheet" href="./goldenlayout-base.css">
 		<link rel="stylesheet" href="./goldenlayout-light-theme.css">
+		<script type="text/javascript" src="./leaflet.min.js" defer></script>
 		<script type="text/javascript" src="./plotly.min.js" defer></script>
 		<script type="text/javascript" src="./data.js" defer></script>
 		<script type="text/javascript" src="./index.js" defer></script>
