Just one plot (and no Golden Layout)

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,6 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<link rel="stylesheet" href="./goldenlayout-base.css">
-		<link rel="stylesheet" href="./goldenlayout-light-theme.css">
 		<script type="text/javascript" src="./plotly.min.js" defer></script>
 		<script type="text/javascript" src="./data.js" defer></script>
 		<script type="text/javascript" src="./index.js" defer></script>
@@ -12,6 +10,6 @@
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="plots-grid"></div>
+		<div id="plot"></div>
 	</body>
 </html>
